# kanidm_client_python

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
