[package]
name = "kanidm_client"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.6"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
pyo3-log = "0.5"
log = "0.4"
kanidm_client = "1.1.0-alpha.6"
kanidm_proto = "1.1.0-alpha.6"
reqwest = "0.11"
uuid = "0.8"
time = "0.2"